examples/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: example
  name: debug-curl
  labels:
    app: busyboxplus
spec:
  containers:
  - image: radial/busyboxplus:curl
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busyboxplus
  restartPolicy: Always
