examples/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  namespace: example
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
