examples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: example
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nginx.local
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
